--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div>
             <input type="checkbox" name="recuerdame" id="recuerdame"> <span>Recuérdame</span>
           </div>
-          <a href="/">¿Olvidate tú Contraseña?</a>
+          <a href="/">¿Olvidaste tú Contraseña?</a>
         </div>
       </form>
       <div class="rrss">
